add illness search functionality and display on interface.

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,13 @@
       <button class="btn btn-info" id="doctorSearch">Search</button>
       <hr>
       <h3>Doctor information:</h3>
-      <div class="showIllnessSearch"></div>
+      <div class="showIllnessSearch">
+      </div>
       <div class="showDoctorSearch"></div>
+      </div>
+      <div class="showNoDoctors"></div>
+      </div>
+      <div class="showError"></div>
     </div>
   </body>
 </html>
