--- a/src/index.html
+++ b/src/index.html
@@ -5,22 +5,19 @@
   <body>
     <div class="container">
       <h1>Get information on medical professionals in your area!</h1>
-      <label for="illness">Find a doctor by illness: </label>
+      <label for="illness">Find a doctor by medical condition: </label>
       <input id="illness" type="text">
       <button class="btn btn-info" id="illnessSearch">Search</button>
       <hr>
-      <label for="dr-name">Find a doctor by name: </label>
+      <label for="dr-name">Find a doctor by first or last name: </label>
       <input id="dr-name" type="text">
       <button class="btn btn-info" id="doctorSearch">Search</button>
       <hr>
       <h3>Doctor information:</h3>
       <div class="showIllnessSearch">
       </div>
-      <div class="showDoctorSearch"></div>
+      <div class="showDoctorSearch">
       </div>
-      <div class="showNoDoctors"></div>
-      </div>
-      <div class="showError"></div>
     </div>
   </body>
 </html>
